--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
@@ -341,10 +341,10 @@
   "pli-tv-kd12:5.1.67": "He should offer a seat to a regular monk. ",
   "pli-tv-kd12:5.1.68": "He shouldn’t sit on the same seat as a regular monk. ",
   "pli-tv-kd12:5.1.69": "He shouldn’t sit on a higher seat than a regular monk. ",
-  "pli-tv-kd12:5.1.70": "He should not sit on a seat when a regular monk is sitting on the ground. ",
-  "pli-tv-kd12:5.1.71": "He should not do walking meditation on the same walking path as a regular monk. ",
-  "pli-tv-kd12:5.1.72": "He should not do walking meditation on a higher walking path than a regular monk. ",
-  "pli-tv-kd12:5.1.73": "He should not do walking meditation on a walking path when a regular monk is walking on the ground. ",
+  "pli-tv-kd12:5.1.70": "He shouldn’t sit on a seat when a regular monk is sitting on the ground. ",
+  "pli-tv-kd12:5.1.71": "He shouldn’t do walking meditation on the same walking path as a regular monk. ",
+  "pli-tv-kd12:5.1.72": "He shouldn’t do walking meditation on a higher walking path than a regular monk. ",
+  "pli-tv-kd12:5.1.73": "He shouldn’t do walking meditation on a walking path when a regular monk is walking on the ground. ",
   "pli-tv-kd12:5.1.74": "He should not, in a monastery, stay in the same room as a monk on probation. … ",
   "pli-tv-kd12:5.1.75": "He should not, in a monastery, stay in the same room as a monk deserving to be sent back to the beginning. … ",
   "pli-tv-kd12:5.1.76": "He should not, in a monastery, stay in the same room as a more senior monk deserving to be given the trial period. … ",
