--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
@@ -345,10 +345,10 @@
   "pli-tv-kd12:5.1.71": "He shouldn’t do walking meditation on the same walking path as a regular monk. ",
   "pli-tv-kd12:5.1.72": "He shouldn’t do walking meditation on a higher walking path than a regular monk. ",
   "pli-tv-kd12:5.1.73": "He shouldn’t do walking meditation on a walking path when a regular monk is walking on the ground. ",
-  "pli-tv-kd12:5.1.74": "He should not, in a monastery, stay in the same room as a monk on probation. … ",
-  "pli-tv-kd12:5.1.75": "He should not, in a monastery, stay in the same room as a monk deserving to be sent back to the beginning. … ",
-  "pli-tv-kd12:5.1.76": "He should not, in a monastery, stay in the same room as a more senior monk deserving to be given the trial period. … ",
-  "pli-tv-kd12:5.1.77": "He should not, in a monastery, stay in the same room as a monk undertaking the trial period. … ",
+  "pli-tv-kd12:5.1.74": "He shouldn’t, in a monastery, stay in the same room as a monk on probation. … ",
+  "pli-tv-kd12:5.1.75": "He shouldn’t, in a monastery, stay in the same room as a monk deserving to be sent back to the beginning. … ",
+  "pli-tv-kd12:5.1.76": "He shouldn’t, in a monastery, stay in the same room as a more senior monk deserving to be given the trial period. … ",
+  "pli-tv-kd12:5.1.77": "He shouldn’t, in a monastery, stay in the same room as a monk undertaking the trial period. … ",
   "pli-tv-kd12:5.1.78": "He should not, in a monastery, stay in the same room as a monk deserving rehabilitation. ",
   "pli-tv-kd12:5.1.79": "He should not, in a non-monastery, stay in the same room as a monk deserving rehabilitation. ",
   "pli-tv-kd12:5.1.80": "He should not, in a monastery or a non-monastery, stay in the same room as a monk deserving rehabilitation. ",
