--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
@@ -353,9 +353,9 @@
   "pli-tv-kd12:5.1.79": "He shouldn’t, in a non-monastery, stay in the same room as a monk deserving rehabilitation. ",
   "pli-tv-kd12:5.1.80": "He shouldn’t, in a monastery or a non-monastery, stay in the same room as a monk deserving rehabilitation. ",
   "pli-tv-kd12:5.1.81": "He shouldn’t sit on the same seat as a monk deserving rehabilitation. ",
-  "pli-tv-kd12:5.1.82": "He should not sit on a higher seat than a monk deserving rehabilitation. ",
-  "pli-tv-kd12:5.1.83": "He should not sit on a seat when a monk deserving rehabilitation is sitting on the ground. ",
-  "pli-tv-kd12:5.1.84": "He should not do walking meditation on the same walking path as a monk deserving rehabilitation. ",
+  "pli-tv-kd12:5.1.82": "He shouldn’t sit on a higher seat than a monk deserving rehabilitation. ",
+  "pli-tv-kd12:5.1.83": "He shouldn’t sit on a seat when a monk deserving rehabilitation is sitting on the ground. ",
+  "pli-tv-kd12:5.1.84": "He shouldn’t do walking meditation on the same walking path as a monk deserving rehabilitation. ",
   "pli-tv-kd12:5.1.85": "He should not do walking meditation on a higher walking path than a monk deserving rehabilitation. ",
   "pli-tv-kd12:5.1.86": "He should not do walking meditation on a walking path when a monk deserving rehabilitation is walking on the ground. ",
   "pli-tv-kd12:5.1.87": "If, as the fourth member of a group, he gives probation, ",
