--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
@@ -377,7 +377,7 @@
   "pli-tv-kd12:6.1.11": "This will affect people’s confidence …” ",
   "pli-tv-kd12:6.1.12": "After rebuking them … ",
   "pli-tv-kd12:6.1.13": "he gave a teaching and addressed the monks: ",
-  "pli-tv-kd12:6.1.14": "“A monk undertaking the trial period should not consent to: ",
+  "pli-tv-kd12:6.1.14": "“A monk undertaking the trial period shouldn’t consent to: ",
   "pli-tv-kd12:6.1.15": "Regular monks bowing down to him; ",
   "pli-tv-kd12:6.1.16": "Regular monks standing up for him; ",
   "pli-tv-kd12:6.1.17": "Regular monks raising their joined palms to him; ",
