--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
@@ -387,14 +387,14 @@
   "pli-tv-kd12:6.1.21": "Regular monks offering him water for washing his feet and a foot stool; ",
   "pli-tv-kd12:6.1.22": "Regular monks offering him a foot scraper; ",
   "pli-tv-kd12:6.1.23": "Regular monks receiving his bowl and robe; ",
-  "pli-tv-kd12:6.1.24": "Regular monks massaging his back when he is bathing. ",
+  "pli-tv-kd12:6.1.24": "Regular monks massaging his back when he’s bathing. ",
   "pli-tv-kd12:6.1.25": "If he consents to any of these, he commits an offense of wrong conduct. ",
   "pli-tv-kd12:6.1.26": "Monks undertaking the trial period should bow down to one another according to seniority, and likewise stand up, raise their joined palms, do acts of respect, offer a seat, offer a bed, offer water for washing the feet and a foot stool, offer a foot scraper, receive bowl and robe, and massage one another’s backs according to seniority when bathing. ",
   "pli-tv-kd12:6.1.27": "Monks undertaking the trial period should do five things with regular monks according to seniority: ",
   "pli-tv-kd12:6.1.28": "the observance-day ceremony, the invitation ceremony, distributing rainy-season robes, meal invitations, and meals. ",
   "pli-tv-kd12:6.1.29": "And I will lay down the proper conduct for a monk undertaking the trial period. ",
   "pli-tv-kd12:6.1.31": "This is the proper conduct: ",
-  "pli-tv-kd12:6.1.32": "He should not give the full ordination. ",
+  "pli-tv-kd12:6.1.32": "He shouldn’t give the full ordination. ",
   "pli-tv-kd12:6.1.33": "He should not give formal support. ",
   "pli-tv-kd12:6.1.34": "He should not have a novice monk attend on him. ",
   "pli-tv-kd12:6.1.35": "He should not accept being appointed as an instructor of the nuns. ",
