--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
@@ -395,7 +395,7 @@
   "pli-tv-kd12:6.1.29": "And I will lay down the proper conduct for a monk undertaking the trial period. ",
   "pli-tv-kd12:6.1.31": "This is the proper conduct: ",
   "pli-tv-kd12:6.1.32": "He shouldn’t give the full ordination. ",
-  "pli-tv-kd12:6.1.33": "He should not give formal support. ",
+  "pli-tv-kd12:6.1.33": "He shouldn’t give formal support. ",
   "pli-tv-kd12:6.1.34": "He should not have a novice monk attend on him. ",
   "pli-tv-kd12:6.1.35": "He should not accept being appointed as an instructor of the nuns. ",
   "pli-tv-kd12:6.1.36": "Even if appointed, he should not instruct the nuns. ",
