--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
@@ -397,9 +397,9 @@
   "pli-tv-kd12:6.1.32": "He shouldn’t give the full ordination. ",
   "pli-tv-kd12:6.1.33": "He shouldn’t give formal support. ",
   "pli-tv-kd12:6.1.34": "He shouldn’t have a novice monk attend on him. ",
-  "pli-tv-kd12:6.1.35": "He should not accept being appointed as an instructor of the nuns. ",
-  "pli-tv-kd12:6.1.36": "Even if appointed, he should not instruct the nuns. ",
-  "pli-tv-kd12:6.1.37": "He should not commit the same offense as the offense for which the Sangha gave him the trial period, nor one that is similar or worse. ",
+  "pli-tv-kd12:6.1.35": "He shouldn’t accept being appointed as an instructor of the nuns. ",
+  "pli-tv-kd12:6.1.36": "Even if appointed, he shouldn’t instruct the nuns. ",
+  "pli-tv-kd12:6.1.37": "He shouldn’t commit the same offense as the offense for which the Sangha gave him the trial period, nor one that is similar or worse. ",
   "pli-tv-kd12:6.1.38": "He should not criticize the legal procedure. ",
   "pli-tv-kd12:6.1.39": "He should not criticize those who did the procedure. ",
   "pli-tv-kd12:6.1.40": "He should not cancel the observance-day ceremony of a regular monk. ",
