--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
@@ -404,10 +404,10 @@
   "pli-tv-kd12:6.1.39": "He shouldn’t criticize those who did the procedure. ",
   "pli-tv-kd12:6.1.40": "He shouldn’t cancel the observance-day ceremony of a regular monk. ",
   "pli-tv-kd12:6.1.41": "He shouldn’t cancel the invitation of a regular monk. ",
-  "pli-tv-kd12:6.1.42": "He should not direct a regular monk. ",
-  "pli-tv-kd12:6.1.43": "He should not make accusations against a regular monk. ",
-  "pli-tv-kd12:6.1.44": "He should not ask a regular monk for permission to accuse him of an offense. ",
-  "pli-tv-kd12:6.1.45": "He should not accuse a regular monk of an offense. ",
+  "pli-tv-kd12:6.1.42": "He shouldn’t direct a regular monk. ",
+  "pli-tv-kd12:6.1.43": "He shouldn’t give instructions a regular monk. ",
+  "pli-tv-kd12:6.1.44": "He shouldn’t ask a regular monk for permission to accuse him of an offense. ",
+  "pli-tv-kd12:6.1.45": "He shouldn’t accuse a regular monk of an offense. ",
   "pli-tv-kd12:6.1.46": "He should not remind a regular monk of an offense. ",
   "pli-tv-kd12:6.1.47": "He should not associate inappropriately with other monks. ",
   "pli-tv-kd12:6.1.48": "He should not walk in front of a regular monk. ",
