--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
@@ -410,7 +410,7 @@
   "pli-tv-kd12:6.1.45": "He shouldn’t accuse a regular monk of an offense. ",
   "pli-tv-kd12:6.1.46": "He shouldn’t remind a regular monk of an offense. ",
   "pli-tv-kd12:6.1.47": "He shouldn’t associate inappropriately with other monks. ",
-  "pli-tv-kd12:6.1.48": "He should not walk in front of a regular monk. ",
+  "pli-tv-kd12:6.1.48": "He shouldn’t walk in front of a regular monk. ",
   "pli-tv-kd12:6.1.49": "He should not sit in front of a regular monk. ",
   "pli-tv-kd12:6.1.50": "He should be given the last seat, the last bed, and the last dwelling of the Sangha and should consent to that. ",
   "pli-tv-kd12:6.1.51": "He should not attend on a regular monk when going to families. ",
