--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
@@ -417,14 +417,14 @@
   "pli-tv-kd12:6.1.52": "He shouldn’t be attended on by a regular monk when going to families. ",
   "pli-tv-kd12:6.1.53": "He shouldn’t undertake the practice of staying in the wilderness. ",
   "pli-tv-kd12:6.1.54": "He shouldn’t undertake the practice of eating only almsfood. ",
-  "pli-tv-kd12:6.1.55": "He should not have someone bring back almsfood for him because he doesn’t want others to know about his status. ",
-  "pli-tv-kd12:6.1.56": "He should inform about his status when he is newly arrived in a monastery. ",
+  "pli-tv-kd12:6.1.55": "He shouldn’t have someone bring back almsfood for him because he doesn’t want others to know about his status. ",
+  "pli-tv-kd12:6.1.56": "He should inform about his status when he’s newly arrived in a monastery. ",
   "pli-tv-kd12:6.1.57": "He should inform new arrivals of his status. ",
   "pli-tv-kd12:6.1.58": "He should inform about his status on the observance day. ",
   "pli-tv-kd12:6.1.59": "He should inform about his status on the invitation day. ",
   "pli-tv-kd12:6.1.60": "He should inform about his status on a daily basis. ",
-  "pli-tv-kd12:6.1.61": "If he is sick, he should inform about his status by messenger. ",
-  "pli-tv-kd12:6.1.62": "He should not go from a monastery with monks to one without monks, except together with a sangha or if there are dangers. ",
+  "pli-tv-kd12:6.1.61": "If he’s sick, he should inform about his status by messenger. ",
+  "pli-tv-kd12:6.1.62": "He shouldn’t go from a monastery with monks to one without monks, except together with a sangha or if there are dangers. ",
   "pli-tv-kd12:6.1.63": "He should not go from a monastery with monks to a non-monastery without monks, except together with a sangha or if there are dangers. ",
   "pli-tv-kd12:6.1.64": "He should not go from a monastery with monks to a monastery or non-monastery without monks, except together with a sangha or if there are dangers. ",
   "pli-tv-kd12:6.1.65": "He should not go from a non-monastery with monks to a monastery without monks, except together with a sangha or if there are dangers. ",
