--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
@@ -438,9 +438,9 @@
   "pli-tv-kd12:6.1.73": "He shouldn’t go from a monastery with monks to a monastery or non-monastery with monks who belong to a different Buddhist sect, except together with a sangha or if there are dangers. ",
   "pli-tv-kd12:6.1.74": "He shouldn’t go from a non-monastery with monks to a monastery with monks who belong to a different Buddhist sect, except together with a sangha or if there are dangers. ",
   "pli-tv-kd12:6.1.75": "He shouldn’t go from a non-monastery with monks to a non-monastery with monks who belong to a different Buddhist sect, except together with a sangha or if there are dangers. ",
-  "pli-tv-kd12:6.1.76": "He should not go from a non-monastery with monks to a monastery or non-monastery with monks who belong to a different Buddhist sect, except together with a sangha or if there are dangers. ",
-  "pli-tv-kd12:6.1.77": "He should not go from a monastery or non-monastery with monks to a monastery with monks who belong to a different Buddhist sect, except together with a sangha or if there are dangers. ",
-  "pli-tv-kd12:6.1.78": "He should not go from a monastery or non-monastery with monks to a non-monastery with monks who belong to a different Buddhist sect, except together with a sangha or if there are dangers. ",
+  "pli-tv-kd12:6.1.76": "He shouldn’t go from a non-monastery with monks to a monastery or non-monastery with monks who belong to a different Buddhist sect, except together with a sangha or if there are dangers. ",
+  "pli-tv-kd12:6.1.77": "He shouldn’t go from a monastery or non-monastery with monks to a monastery with monks who belong to a different Buddhist sect, except together with a sangha or if there are dangers. ",
+  "pli-tv-kd12:6.1.78": "He shouldn’t go from a monastery or non-monastery with monks to a non-monastery with monks who belong to a different Buddhist sect, except together with a sangha or if there are dangers. ",
   "pli-tv-kd12:6.1.79": "He should not go from a monastery or non-monastery with monks to a monastery or non-monastery with monks who belong to a different Buddhist sect, except together with a sangha or if there are dangers. ",
   "pli-tv-kd12:6.1.80": "He may go from a monastery with monks to one with monks who belong to the same Buddhist sect if he knows he will be able to arrive on the same day. ",
   "pli-tv-kd12:6.1.81": "He may go from a monastery with monks to a non-monastery with monks who belong to the same Buddhist sect if he knows he will be able to arrive on the same day. ",
