--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
@@ -361,7 +361,7 @@
   "pli-tv-kd12:5.1.87": "If, as the fourth member of a group, he gives probation, ",
   "pli-tv-kd12:5.1.88": "sends back to the beginning, ",
   "pli-tv-kd12:5.1.89": "or gives the trial period, ",
-  "pli-tv-kd12:5.1.90": "or as the twentieth member of a group, he rehabilitates, it is invalid and not to be done.” ",
+  "pli-tv-kd12:5.1.90": "or as the twentieth member of a group, he rehabilitates, it’s invalid and not to be done.” ",
   "pli-tv-kd12:5.1.91": "The proper conduct for those deserving the trial period is finished. ",
   "pli-tv-kd12:6.1.0": "4. The proper conduct for those undertaking the trial period ",
   "pli-tv-kd12:6.1.1": "At this time monks undertaking the trial period consented to regular monks bowing down to them, standing up for them, raising their joined palms to them, doing acts of respect toward them, offering them a seat, offering them a bed, offering them water for washing their feet and a foot stool, offering them a foot scraper, receiving their bowl and robe, and massaging their backs when bathing. ",
