--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
@@ -615,5 +615,6 @@
   "pli-tv-kd12:9.1.74": "The proper conduct for those deserving rehabilitation is finished. ",
   "pli-tv-kd12:9.1.75": "The chapter on those on probation is finished. ",
   "pli-tv-kd12:9.1.76": "In this chapter there are five topics. ",
+  "pli-tv-kd12:9.1.77": "This is the summary: ",
   "pli-tv-kd12:9.1.116": "The chapter on those on probation is finished. "
 }
