--- a/translation/de/sabbamitta/sutta/kn/thag/thag2.40_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/thag/thag2.40_translation-de-sabbamitta.json
@@ -1,4 +1,5 @@
 {
   "thag2.40:0.1": "Strophen der altehrwürdigen Mönche 2.40 ",
-  "thag2.40:0.2": "Das Zweierbuch "
+  "thag2.40:0.2": "Das Zweierbuch ",
+  "thag2.40:0.3": "4. Das vierte Kapitel "
 }
