--- a/translation/de/sabbamitta/sutta/kn/thag/thag2.40_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/thag/thag2.40_translation-de-sabbamitta.json
@@ -5,5 +5,6 @@
   "thag2.40:0.4": "Kappaṭakura ",
   "thag2.40:1.1": "Dieser Kerl, „Fetzen-Reis“, er ist schon ein Fetzen! ",
   "thag2.40:1.2": "In den Krug der Unsterblichkeit, glänzend und überfließend, ",
-  "thag2.40:1.3": "wurde genügend Lehre gegossen; "
+  "thag2.40:1.3": "wurde genügend Lehre gegossen; ",
+  "thag2.40:1.4": "der Pfad, um die Vertiefungen aufzubauen, wurde dargelegt. "
 }
