--- a/translation/de/sabbamitta/sutta/kn/thag/thag2.40_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/thag/thag2.40_translation-de-sabbamitta.json
@@ -8,5 +8,6 @@
   "thag2.40:1.3": "wurde genügend Lehre gegossen; ",
   "thag2.40:1.4": "der Pfad, um die Vertiefungen aufzubauen, wurde dargelegt. ",
   "thag2.40:2.1": "Nicke nicht ein, Fetzen – ",
-  "thag2.40:2.2": "sonst gibt's eine Ohrfeige von mir! "
+  "thag2.40:2.2": "sonst gibt's eine Ohrfeige von mir! ",
+  "thag2.40:2.3": "Inmitten des Saṅgha einnicken? "
 }
