--- a/translation/de/sabbamitta/sutta/kn/thag/thag2.40_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/thag/thag2.40_translation-de-sabbamitta.json
@@ -9,5 +9,6 @@
   "thag2.40:1.4": "der Pfad, um die Vertiefungen aufzubauen, wurde dargelegt. ",
   "thag2.40:2.1": "Nicke nicht ein, Fetzen – ",
   "thag2.40:2.2": "sonst gibt's eine Ohrfeige von mir! ",
-  "thag2.40:2.3": "Inmitten des Saṅgha einnicken? "
+  "thag2.40:2.3": "Inmitten des Saṅgha einnicken? ",
+  "thag2.40:2.4": "Du kennst keine Grenzen. "
 }
