--- a/translation/de/sabbamitta/sutta/kn/thag/thag2.40_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/thag/thag2.40_translation-de-sabbamitta.json
@@ -5,7 +5,7 @@
   "thag2.40:0.4": "Kappaṭakura ",
   "thag2.40:1.1": "Dieser Kerl, „Fetzen-Reis“, er ist schon ein Fetzen! ",
   "thag2.40:1.2": "In den Nektarkrug der Unsterblichkeit, glänzend und überfließend, ",
-  "thag2.40:1.3": "wurde genügend Lehre gegossen; ",
+  "thag2.40:1.3": "wurde genug von der Lehre gegossen; ",
   "thag2.40:1.4": "der Pfad, um die Vertiefungen aufzubauen, wurde dargelegt. ",
   "thag2.40:2.1": "Nicke nicht ein, Fetzen – ",
   "thag2.40:2.2": "sonst gibt's eine Ohrfeige von mir! ",
