--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.81_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.81_translation-de-sabbamitta.json
@@ -2,5 +2,6 @@
   "sn22.81:0.1": "Verbundene Lehrreden 22.81 ",
   "sn22.81:0.2": "8. Das Kapitel über Verzehren ",
   "sn22.81:0.3": "In Pārileyya ",
-  "sn22.81:1.1": "Einmal hielt sich der Buddha bei Kosambi auf, in Ghositas Kloster. "
+  "sn22.81:1.1": "Einmal hielt sich der Buddha bei Kosambi auf, in Ghositas Kloster. ",
+  "sn22.81:1.2": "Da kleidete der Buddha sich am Morgen an, nahm Schale und Robe und betrat Kosambi zum Almosengang. "
 }
