--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.81_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.81_translation-de-sabbamitta.json
@@ -5,5 +5,6 @@
   "sn22.81:1.1": "Einmal hielt sich der Buddha bei Kosambi auf, in Ghositas Kloster. ",
   "sn22.81:1.2": "Da kleidete der Buddha sich am Morgen an, nahm Schale und Robe und betrat Kosambi zum Almosengang. ",
   "sn22.81:1.3": "Nach dem Essen, als er vom Almosengang zurückkam, brachte er seine Unterkunft in Ordnung, nahm Schale und Robe, und ohne seine Aufwärter zu unterrichten oder sich vom Saṅgha der Mönche und Nonnen zu verabschieden, machte er sich allein ohne einen Gefährten auf die Wanderschaft. ",
-  "sn22.81:2.1": "Nicht lange, nachdem der Buddha gegangen war, ging einer der Mönche zum Ehrwürdigen Ānanda und unterrichtete ihn darüber. "
+  "sn22.81:2.1": "Nicht lange, nachdem der Buddha gegangen war, ging einer der Mönche zum Ehrwürdigen Ānanda und unterrichtete ihn darüber. ",
+  "sn22.81:2.3": "Ānanda sagte: „Werter Freund, wenn der Buddha so weggeht, heißt das, er will allein bleiben. "
 }
